--- a/DapperDatabase.csproj
+++ b/DapperDatabase.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{589E4FCD-BB58-43AF-9F80-0DDE0F82B4BF}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>DapperDatabase</RootNamespace>
     <AssemblyName>DapperDatabase</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -56,6 +56,7 @@
     <Compile Include="Dapper.cs" />
     <Compile Include="IDapper.cs" />
     <Compile Include="MemberDatas\MemberDapper.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerDatas\ServerDapper.cs" />
   </ItemGroup>
